--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+
+
+
+
+
+
+
+
+
 .App {
   text-align: center;
 }
@@ -18,7 +27,7 @@
 .search {
   height: 2rem; 
   width: 90%;
-  background-color:whitesmoke;
+  background-color:#bcd0c7;
   margin-bottom: 5rem;
   margin-top: 5px; 
   outline-style: solid; 
