--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@
   background-color:#bcd0c7;
   margin-bottom: 5rem;
   margin-top: 5px; 
-  outline-style: solid; 
+  /* outline-style: solid;  */
 }
 
 
