--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,12 @@
 
 .App {
   text-align: center;
+  background-color: #f5f5f5;
 }
 
 .container {
   display: grid;
-  /* background-color: red;  */
-  outline-style: inset;;
+  margin-top: 1rem;
 }
 
 .videoPlayer {
@@ -20,25 +20,24 @@
 .search {
   height: 2rem; 
   width: 90%;
-  background-color:#bcd0c7;
   margin-bottom: 5rem;
   margin-top: 5px; 
+}
+
+.jumbotron {
+  background-image: url("./falconHeavy.jpg");
+  padding-top: 25rem; 
+  max-width: 95%;
+  margin-left: 2rem;
+}
+
+
+.twitter {
+  background-color:#bcd0c7;
 }
 
 
 
 
-
-
-/* .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-} */
 
 
