--- a/src/App.css
+++ b/src/App.css
@@ -25,9 +25,12 @@
 }
 
 .jumbotron {
-  background-image: url("./falconHeavy.jpg");
-  padding-top: 25rem; 
+  background-image: url("./assets/heavyTwo.jpg");
+  background-position: center;
+  background-size: cover;
   max-width: 100%;
+  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+  padding:20rem;
 }
 
 
@@ -40,8 +43,20 @@
   margin:1rem;
 }
 
+.card {
+  margin-bottom:1rem; 
+}
 
+.navbar {
+  width: 90%;
+  padding-left: 10rem;
+  padding-top: 2rem;
+  color:#2892d7;
+}
 
+#navItem {
+  color:#58b9d1;
+}
 
 
 
