--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
   width: 90%; 
   outline-style: solid;
   margin-top: 5rem; 
+
 }
 
 .search {
@@ -29,7 +30,7 @@
   background-position: center;
   background-size: cover;
   max-width: 100%;
-  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.75);
   padding:20rem;
 }
 
@@ -41,21 +42,29 @@
 .launch {
   /* background-color:#e0e0e0; */
   margin:1rem;
+  
 }
 
 .card {
-  margin-bottom:1rem; 
+  margin-bottom:1rem;
+  box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.75); 
 }
 
 .navbar {
   width: 90%;
-  padding-left: 10rem;
+  padding-left: 11rem;
   padding-top: 2rem;
   color:#2892d7;
 }
 
 #navItem {
   color:#58b9d1;
+}
+
+#map {
+  background-color: blue;
+  height: 400px; 
+  width: 800px;  
 }
 
 
