added ISS icon for map tracker

--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,12 @@
   width: 100%;  
 }
 
+.iss-icon {
+  background-image: url("./assets/space-station.png");
+  background-position: center;
+  /* background-size: cover; */
+}
+
 
 
 
