--- a/src/App.css
+++ b/src/App.css
@@ -89,7 +89,19 @@
   padding-right:5rem;
 }
 
+#pic {
+  max-height: 4rem;
+  max-width: 4rem;
+  border-radius: 180%; 
+  padding-bottom:none; 
+  float: left; 
+}
 
+.tweet {
+  max-height: fit-content;
+  max-width: 100%;
+  box-shadow: none;
+}
 
 
 
