--- a/src/App.css
+++ b/src/App.css
@@ -13,15 +13,15 @@
 .videoPlayer {
   height: 25rem; 
   width: 100%; 
-  outline-style: solid;
+  /* outline-style: inset; */
 
 }
 
 .search {
   height: 2rem; 
   width: 75%;
-  margin-bottom: 5rem;
-  margin-top: .5rem; 
+  margin-bottom: 3rem;
+  margin-top: 1rem; 
 }
 
 .jumbotron {
@@ -40,7 +40,7 @@
 }
 
 .twitter {
-  max-height: 40rem;
+  height: 34rem;
   overflow: scroll; 
   
 }
