--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
   max-height: 100%;
   /* box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.75); */
   border-radius: 5%;
-  margin-top:2rem;
+  /* margin-top:1rem; */
   -webkit-background-size: 100% 100%;
   -moz-background-size: 100% 100%;
   -o-background-size: 100% 100%;
@@ -57,10 +57,12 @@
 }
 
 .navbar {
-  width: 90%;
-  padding-left: 11rem;
+  width: 100%;
+  /* padding-left: 11rem;
+  padding-right: 2rem; */
   /* padding-top: 2rem; */
   color:#2892d7;
+  /* position: r; */
 }
 
 #navItem {
@@ -83,11 +85,11 @@
 }
 
 #logo {
-  background-image: url('./assets/logo.png');
-  background-position: center;
-  background-size: cover;
-  width:32%;
-  height:6rem;
+  background-image: url('./assets/logoFinal.png');
+  background-repeat: no-repeat;
+  width:11rem;
+  height:3rem;
+  margin-left:11rem; 
 }
 
 #pic {
@@ -105,6 +107,14 @@
   border-radius: 5%;
   font-size: 15px; 
   
+}
+
+#twitter-logo {
+  background-image:url('./assets/twitter.jpg');
+  background-position: center;
+  background-size: cover;
+  height: 5rem;
+  width: 5rem; 
 }
 
 
